# GameOfLife

./: CMakeLists.txt
inc/: File.hpp  MainWindow.hpp
src/: CMakeLists.txt  File.cpp  MainWindow.cpp  MainWindow.ui  main.cpp
